Fixed alignment bug

--- a/public/stylesheets/style.application.css
+++ b/public/stylesheets/style.application.css
@@ -145,7 +145,7 @@ a:hover { color: #0069BF;}
 }
 .wb-document-title{
     float:left;
-    width: 75%;
+    width: 65%;
 }
 .wb-document-title a{
     display: block;
